3.0.7
=====
- Improved escaping of attributes in XML template mode: \t, \n and \r now being always escaped in order to prevent
  them being normalised into white spaces by XML parsers when reading (which would be according to the spec).
- Updated Unbescape dependency to 1.1.5.RELEASE.


3.0.6
=====
- Fixed unclosed quote in JavaScript/CSS comments breaking parsing (wrongly considered literal starts).
- Fixed bad parsing of '/content()' selector (AttoParser) in some scenarios, leading to suboptimal execution of
  this type of fragment selection.
- Fixed prevent fragments without a signature being called with unnamed parameters.
- Added allowing template suffix to be applied only if template name doesn't already have a known file extension.
- Added application of template mode depending on template resource extension during resolution.
- Improved the way output content type and template mode relate to each other (made exclusive) in TemplateSpec.
- Improved instances of dynamic class loading by making references package-relative for better resilience
  to package renaming.
- Updated AttoParser dependency to 2.0.4.RELEASE.


3.0.5
=====
- Fixed bad interaction of literal parsing in javascript inlining introduced in 3.0.4, causing inlined expressions
  containing literals ('...') to not be adequately parsed, and therefore not executed at all.


3.0.4
=====
- Fixed possible bad parsing of comment start/end delimiters in JavaScript and CSS inlining when the 2K buffer
  used at the Text Parser happened to end in the middle of a JavaScript/CSS text literal.
- Fixed bad behaviour of th:remove="all-but-first" in combination with a th:each on a zero-element collection.
- Fixed custom HTML5 elements with no suffix in their names ("<tag->", which are allowed by the Custom
  Element spec) provoking an exception.
- Improved startup times at the template engine by means of lazy initialization of dialect artifacts.